tdf#79298 - FORMATTING: Copy/paste: import strikethrough attribute

Change-Id: I0539e87f2a87f869e234ed7c944b9da6bd0e82bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177847
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins
(cherry picked from commit 813f34d6726584368641f2e93fdaf79ff387d6b8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178189
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>